kgateway/agentgateway: seems to be working even though still not programmed

--- a/ai/kgateway-mcp/gateway-parameters.yaml
+++ b/ai/kgateway-mcp/gateway-parameters.yaml
@@ -2,7 +2,7 @@ apiVersion: gateway.kgateway.dev/v1alpha1
 kind: GatewayParameters
 metadata:
   name: kgateway
-  namespace: mcp
+  namespace: kgateway-system
 spec:
   kube:
     agentGateway:
