--- a/platform/argo-rejects/gateway-class.yaml
+++ b/platform/argo-rejects/gateway-class.yaml
@@ -1,3 +1,6 @@
+# https://github.com/christian-posta/scripted-solo-demos/blob/master/agentgateway/kubernetes/gateway.yaml
+# with some changes
+---
 kind: GatewayClass
 apiVersion: gateway.networking.k8s.io/v1
 metadata:
@@ -8,4 +11,4 @@ spec:
     group: gateway.kgateway.dev
     kind: GatewayParameters
     name: kgateway
-    namespace: kgateway-system
+    namespace: mcp
