--- a/platform/argo-rejects/kgateway-ai-app.yaml
+++ b/platform/argo-rejects/kgateway-ai-app.yaml
@@ -10,8 +10,14 @@ helm:
   values:
     agentGateway:
       enabled: true
-    gateway:
-      aiExtension:
-        enabled: true
+    discoveryNamespaceSelectors:
+    - matchLabels:
+        kubernetes.io/metadata.name: ai-gateway-config
+
+
+    #gateway:
+    #  aiExtension:
+    #    enabled: true
         # I don't understand agentGateway vs aiExtention
         # https://kgateway.dev/docs/ai/setup/
+        # inferenceExtension
