--- a/platform/argocd-foundations/argo-projects.yaml
+++ b/platform/argocd-foundations/argo-projects.yaml
@@ -45,11 +45,14 @@ spec:
     server: '*'
   - namespace: 'kgateway-mcp'
     server: '*'
+  - namespace: '*'
+    server: '*'
   sourceRepos:
   - 'https://github.com/olga-mir/playground.git'
   - 'cr.kgateway.dev/kgateway-dev/charts'
   - 'ghcr.io/kagent-dev/kagent/helm'
   - 'us-docker.pkg.dev/developers-369321/gloo-platform-dev/charts'
+  - 'ghcr.io/agentgateway/agentgateway'
   clusterResourceWhitelist:
   - group: 'apiextensions.k8s.io'
     kind: 'CustomResourceDefinition'
