--- a/platform/crossplane/compositions/github-repo-config.yaml
+++ b/platform/crossplane/compositions/github-repo-config.yaml
@@ -28,6 +28,9 @@ spec:
         base:
           apiVersion: repo.github.upbound.io/v1alpha1
           kind: Repository
+          metadata:
+            annotations:
+              crossplane.io/resource-policy: Orphan
           spec:
             forProvider:
               visibility: private
@@ -39,6 +42,8 @@ spec:
               allowRebaseMerge: true
               deleteBranchOnMerge: true
               autoInit: true
+            providerConfigRef:
+              name: github-provider-org
         patches:
         # Use serviceName as repository name if name not provided
         - type: FromCompositeFieldPath
@@ -47,6 +52,15 @@ spec:
         - type: FromCompositeFieldPath
           fromFieldPath: spec.name
           toFieldPath: spec.forProvider.name
+          policy:
+            fromFieldPath: Optional
+        # Patch for external-name to allow adoption of existing repositories
+        - type: FromCompositeFieldPath
+          fromFieldPath: spec.serviceName # Default to serviceName
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
+        - type: FromCompositeFieldPath
+          fromFieldPath: spec.name # Override with spec.name if provided
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
           policy:
             fromFieldPath: Optional
         - type: FromCompositeFieldPath
@@ -96,16 +110,22 @@ spec:
         base:
           apiVersion: repo.github.upbound.io/v1alpha1
           kind: DefaultBranch
+          metadata:
+            annotations:
+              crossplane.io/resource-policy: Orphan
           spec:
             forProvider:
               branch: main
+            providerConfigRef:
+              name: github-provider-org
         patches:
+        # Patch for external-name: repository name
         - type: FromCompositeFieldPath
           fromFieldPath: spec.serviceName
-          toFieldPath: spec.forProvider.repository
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
         - type: FromCompositeFieldPath
           fromFieldPath: spec.name
-          toFieldPath: spec.forProvider.repository
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
           policy:
             fromFieldPath: Optional
         - type: FromCompositeFieldPath
@@ -113,7 +133,6 @@ spec:
           toFieldPath: spec.forProvider.branch
           policy:
             fromFieldPath: Optional
-        # Add labels
         - type: FromCompositeFieldPath
           fromFieldPath: spec.teamName
           toFieldPath: metadata.labels["github.platform.io/team"]
@@ -126,6 +145,9 @@ spec:
         base:
           apiVersion: repo.github.upbound.io/v1alpha1
           kind: RepositoryRuleset
+          metadata:
+            annotations:
+              crossplane.io/resource-policy: Orphan
           spec:
             forProvider:
               enforcement: active
@@ -134,15 +156,18 @@ spec:
                 refName:
                   include: ["refs/heads/main"]
               rules:
-              - type: required_status_checks
-                parameters:
-                  strictRequired: true
-                  requiredStatusChecks: []
-              - type: required_pull_request_reviews
-                parameters:
-                  requiredApprovingReviewCount: 2
-                  dismissStaleReviews: true
-                  requireCodeOwnerReviews: true
+              - requiredStatusChecks:
+                  - requiredCheck: []
+                    # strictRequiredStatusChecksPolicy: true # Optional boolean
+              - pullRequest:
+                  - requiredApprovingReviewCount: 2
+                    dismissStaleReviewsOnPush: true
+                    requireCodeOwnerReview: true
+                  # Other potential parameters:
+                  # requiredReviewThreadResolution: false
+                  # requireLastPushApproval: false
+            providerConfigRef:
+              name: github-provider-org
         patches:
         - type: FromCompositeFieldPath
           fromFieldPath: spec.serviceName
@@ -152,6 +177,35 @@ spec:
           toFieldPath: spec.forProvider.repository
           policy:
             fromFieldPath: Optional
+
+        # Patch for external-name using spec.serviceName as repo slug part
+        # Format: repo_slug:ruleset_name where ruleset_name is teamName-serviceName-protection
+        - type: CombineFromComposite
+          combine:
+            variables:
+              - fromFieldPath: spec.serviceName # Repo slug part
+              - fromFieldPath: spec.teamName
+              - fromFieldPath: spec.serviceName
+            strategy: string
+            string:
+              fmt: "%[1]s:%[2]s-%[3]s-protection"
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
+          policy:
+            fromFieldPath: Optional # If spec.serviceName or spec.teamName is missing
+
+        # Override external-name using spec.name as repo slug part, if spec.name is provided
+        - type: CombineFromComposite
+          combine:
+            variables:
+              - fromFieldPath: spec.name        # Repo slug part
+              - fromFieldPath: spec.teamName
+              - fromFieldPath: spec.serviceName
+            strategy: string
+            string:
+              fmt: "%[1]s:%[2]s-%[3]s-protection"
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
+          policy:
+            fromFieldPath: Optional # This patch applies only if spec.name (and others) are present
         # Create ruleset name based on service and team
         - type: CombineFromComposite
           combine:
@@ -185,42 +239,18 @@ spec:
       kind: Resources
       resources:
 
-      # Repository Secrets
-      - name: repository-secrets
-        base:
-          apiVersion: actions.github.upbound.io/v1alpha1
-          kind: ActionsSecret
-          spec:
-            forProvider: {}
-        patches:
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.serviceName
-          toFieldPath: spec.forProvider.repository
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.name
-          toFieldPath: spec.forProvider.repository
-          policy:
-            fromFieldPath: Optional
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.secrets
-          toFieldPath: spec.forProvider
-          policy:
-            fromFieldPath: Optional
-        # Add labels
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.teamName
-          toFieldPath: metadata.labels["github.platform.io/team"]
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.serviceName
-          toFieldPath: metadata.labels["github.platform.io/service"]
-
       # Repository Variables
       - name: repository-variables
         base:
           apiVersion: actions.github.upbound.io/v1alpha1
           kind: ActionsVariable
+          metadata:
+            annotations:
+              crossplane.io/resource-policy: Orphan
           spec:
             forProvider: {}
+            providerConfigRef:
+              name: github-provider-org
         patches:
         - type: FromCompositeFieldPath
           fromFieldPath: spec.serviceName
@@ -228,6 +258,21 @@ spec:
         - type: FromCompositeFieldPath
           fromFieldPath: spec.name
           toFieldPath: spec.forProvider.repository
+          policy:
+            fromFieldPath: Optional
+        # Patch for external-name: repository_name:variable_name
+        # This assumes 'spec.variables' is an array and we're targeting the first variable's name.
+        # If spec.variables is not an array or has a different structure, this needs adjustment.
+        # This also assumes the 'ActionsVariable' resource manages one variable.
+        - type: CombineFromComposite
+          combine:
+            variables:
+              - fromFieldPath: spec.serviceName # or spec.name
+              - fromFieldPath: spec.variables[0].name
+            strategy: string
+            string:
+              fmt: "%s:%s"
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
           policy:
             fromFieldPath: Optional
         - type: FromCompositeFieldPath
@@ -257,13 +302,19 @@ spec:
         base:
           apiVersion: repo.github.upbound.io/v1alpha1
           kind: RepositoryWebhook
+          metadata:
+            annotations:
+              crossplane.io/resource-policy: Orphan
           spec:
             forProvider:
               configuration:
-                contentType: json
-                insecureSsl: false
+                - contentType: json
+                  insecureSsl: false
+                  url: "https://example.com/default-webhook-url" # TODO
               active: true
               events: ["push", "pull_request"]
+            providerConfigRef:
+              name: github-provider-org
         patches:
         - type: FromCompositeFieldPath
           fromFieldPath: spec.serviceName
@@ -271,41 +322,24 @@ spec:
         - type: FromCompositeFieldPath
           fromFieldPath: spec.name
           toFieldPath: spec.forProvider.repository
+          policy:
+            fromFieldPath: Optional
+        # Patch for external-name: For webhooks, the external-name is the webhook ID.
+        # Adopting an existing webhook by a predictable name is difficult without knowing its ID.
+        # We'll set a placeholder or a common identifier if possible, but true adoption might require manual ID input.
+        # For simplicity, we'll use repo name + a fixed suffix, acknowledging this might not work for adoption.
+        - type: CombineFromComposite
+          combine:
+            variables:
+              - fromFieldPath: spec.serviceName # or spec.name
+            strategy: string
+            string:
+              fmt: "%s:default-webhook" # Placeholder, actual adoption needs the ID
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
           policy:
             fromFieldPath: Optional
         - type: FromCompositeFieldPath
           fromFieldPath: spec.webhooks
-          toFieldPath: spec.forProvider
-          policy:
-            fromFieldPath: Optional
-        # Add labels
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.teamName
-          toFieldPath: metadata.labels["github.platform.io/team"]
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.serviceName
-          toFieldPath: metadata.labels["github.platform.io/service"]
-
-      # Repository Actions Permissions
-      - name: actions-permissions
-        base:
-          apiVersion: actions.github.upbound.io/v1alpha1
-          kind: RepositoryPermission
-          spec:
-            forProvider:
-              allowedActions: selected
-              enabled: true
-        patches:
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.serviceName
-          toFieldPath: spec.forProvider.repository
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.name
-          toFieldPath: spec.forProvider.repository
-          policy:
-            fromFieldPath: Optional
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.actions
           toFieldPath: spec.forProvider
           policy:
             fromFieldPath: Optional
@@ -326,15 +360,21 @@ spec:
       kind: Resources
       resources:
 
-      # Team Repository Access
       - name: team-access
         base:
           apiVersion: team.github.upbound.io/v1alpha1
           kind: TeamRepository
+          metadata:
+            annotations:
+              crossplane.io/resource-policy: Orphan
           spec:
             forProvider:
-              permission: push
+              # one of pull, triage, push, maintain, admin or the name of an existing custom repository role within the organisation
+              permission: maintain
+            providerConfigRef:
+              name: github-provider-org
         patches:
+
         - type: FromCompositeFieldPath
           fromFieldPath: spec.serviceName
           toFieldPath: spec.forProvider.repository
@@ -343,16 +383,24 @@ spec:
           toFieldPath: spec.forProvider.repository
           policy:
             fromFieldPath: Optional
-        # Default team access - give owning team maintain access
+
+        # Patch for external-name: team_slug_or_id:repository_name
+        - type: CombineFromComposite
+          combine:
+            variables:
+              - fromFieldPath: spec.teamName
+              - fromFieldPath: spec.serviceName # or spec.name
+            strategy: string
+            string:
+              fmt: "%s:%s"
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
+          policy:
+            fromFieldPath: Optional
+
         - type: FromCompositeFieldPath
           fromFieldPath: spec.teamName
           toFieldPath: spec.forProvider.teamId
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.teamAccess
-          toFieldPath: spec.forProvider
-          policy:
-            fromFieldPath: Optional
-        # Add labels
+
         - type: FromCompositeFieldPath
           fromFieldPath: spec.teamName
           toFieldPath: metadata.labels["github.platform.io/team"]
@@ -365,9 +413,14 @@ spec:
         base:
           apiVersion: repo.github.upbound.io/v1alpha1
           kind: RepositoryCollaborator
+          metadata:
+            annotations:
+              crossplane.io/resource-policy: Orphan
           spec:
             forProvider:
               permission: push
+            providerConfigRef:
+              name: github-provider-org
         patches:
         - type: FromCompositeFieldPath
           fromFieldPath: spec.serviceName
@@ -377,12 +430,31 @@ spec:
           toFieldPath: spec.forProvider.repository
           policy:
             fromFieldPath: Optional
-        - type: FromCompositeFieldPath
-          fromFieldPath: spec.collaborators
-          toFieldPath: spec.forProvider
+        # Patch for external-name: repository_name:username
+        # This assumes 'spec.collaborators' is an array and we're targeting the first collaborator's username.
+        # This also assumes the 'RepositoryCollaborator' resource manages one collaborator.
+        - type: CombineFromComposite
+          combine:
+            variables:
+              - fromFieldPath: spec.serviceName # or spec.name
+              - fromFieldPath: spec.collaborators[0].username
+            strategy: string
+            string:
+              fmt: "%s:%s"
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
           policy:
             fromFieldPath: Optional
-        # Add labels
+        # Patch individual fields from the first collaborator in the array
+        - type: FromCompositeFieldPath
+          fromFieldPath: spec.collaborators[0].username
+          toFieldPath: spec.forProvider.username
+          policy:
+            fromFieldPath: Optional
+        - type: FromCompositeFieldPath
+          fromFieldPath: spec.collaborators[0].permission
+          toFieldPath: spec.forProvider.permission
+          policy:
+            fromFieldPath: Optional
         - type: FromCompositeFieldPath
           fromFieldPath: spec.teamName
           toFieldPath: metadata.labels["github.platform.io/team"]
@@ -404,13 +476,15 @@ spec:
         base:
           apiVersion: repo.github.upbound.io/v1alpha1
           kind: RepositoryFile
+          metadata:
+            annotations:
+              crossplane.io/resource-policy: Orphan
           spec:
             forProvider:
               file: .github/CODEOWNERS
               commitMessage: "Add CODEOWNERS file via Crossplane"
               commitAuthor: "Platform Engineering"
               commitEmail: "platform@company.com"
-              overwriteOnCreate: true
             providerConfigRef:
               name: github-provider-org
         patches:
@@ -420,6 +494,19 @@ spec:
         - type: FromCompositeFieldPath
           fromFieldPath: spec.name
           toFieldPath: spec.forProvider.repository
+          policy:
+            fromFieldPath: Optional
+        # Patch for external-name: repository_slug:file_path:branch_name
+        # Assuming default branch is 'main' if not specified elsewhere for this file.
+        - type: CombineFromComposite
+          combine:
+            variables:
+              - fromFieldPath: spec.serviceName # or spec.name
+              - fromFieldPath: spec.settings.defaultBranch # Fallback to 'main' if not set
+            strategy: string
+            string:
+              fmt: "%s:.github/CODEOWNERS:%s" # Uses spec.settings.defaultBranch or you can hardcode 'main'
+          toFieldPath: metadata.annotations["crossplane.io/external-name"]
           policy:
             fromFieldPath: Optional
         - type: FromCompositeFieldPath
@@ -438,7 +525,6 @@ spec:
           toFieldPath: spec.forProvider.content
           policy:
             fromFieldPath: Optional
-        # Add labels
         - type: FromCompositeFieldPath
           fromFieldPath: spec.teamName
           toFieldPath: metadata.labels["github.platform.io/team"]
