--- a/platform/crossplane/compositions/github-team-config.yaml
+++ b/platform/crossplane/compositions/github-team-config.yaml
@@ -26,11 +26,17 @@ spec:
                   privacy: closed
                   description: Team created by Crossplane
                 providerConfigRef:
-                  name: default
+                  name: github-provider-org
             patches:
               - type: FromCompositeFieldPath
                 fromFieldPath: spec.teamName
                 toFieldPath: metadata.name
+              # The explicit patch for external-name using teamName (slug) is removed.
+              # Crossplane will populate external-name from status.atProvider.id (numerical ID)
+              # after the team is created by the provider using spec.forProvider.name (slug).
+              #- type: FromCompositeFieldPath
+              #  fromFieldPath: spec.teamName
+              #  toFieldPath: metadata.annotations["crossplane.io/external-name"]
               - type: FromCompositeFieldPath
                 fromFieldPath: spec.teamName
                 toFieldPath: spec.forProvider.name
@@ -40,43 +46,11 @@ spec:
               - type: FromCompositeFieldPath
                 fromFieldPath: spec.privacy
                 toFieldPath: spec.forProvider.privacy
-              - type: FromCompositeFieldPath
-                fromFieldPath: spec.parentTeam
-                toFieldPath: spec.forProvider.parentTeamId
-                policy:
-                  fromFieldPath: Optional
-
-    - step: add-team-members
-      functionRef:
-        name: function-patch-and-transform
-      input:
-        apiVersion: pt.fn.crossplane.io/v1beta1
-        kind: Resources
-        resources:
-          - name: team-membership
-            base:
-              apiVersion: team.github.upbound.io/v1alpha1
-              kind: TeamMembership
-              metadata:
-                name: team-member
-              spec:
-                forProvider:
-                  role: member
-                providerConfigRef:
-                  name: default
-            patches:
-              - type: FromCompositeFieldPath
-                fromFieldPath: spec.members[0].username
-                toFieldPath: metadata.name
-              - type: FromCompositeFieldPath
-                fromFieldPath: spec.members[0].username
-                toFieldPath: spec.forProvider.username
-              - type: FromCompositeFieldPath
-                fromFieldPath: spec.members[0].role
-                toFieldPath: spec.forProvider.role
-              - type: FromCompositeFieldPath
-                fromFieldPath: spec.teamName
-                toFieldPath: spec.forProvider.teamId
+              #- type: FromCompositeFieldPath
+              #  fromFieldPath: spec.parentTeam
+              #  toFieldPath: spec.forProvider.parentTeamId
+              #  policy:
+              #    fromFieldPath: Optional
 
     - step: configure-repository-access
       functionRef:
@@ -95,19 +69,17 @@ spec:
                 forProvider:
                   permission: push
                 providerConfigRef:
-                  name: default
+                  name: github-provider-org
             patches:
-              - type: FromCompositeFieldPath
-                fromFieldPath: spec.repositoryAccess[0].repositoryName
+              - type: CombineFromComposite
+                combine:
+                  variables:
+                    - fromFieldPath: spec.teamName
+                    - fromFieldPath: spec.repositoryAccess[0].repositoryName
+                  strategy: string
+                  string:
+                    fmt: "%s-%s"
                 toFieldPath: metadata.name
-                transforms:
-                  - type: string
-                    string:
-                      fmt: "%s-%s"
-                      type: Format
-                      variables:
-                        - fromFieldPath: spec.teamName
-                        - fromFieldPath: spec.repositoryAccess[0].repositoryName
               - type: FromCompositeFieldPath
                 fromFieldPath: spec.repositoryAccess[0].repositoryName
                 toFieldPath: spec.forProvider.repository
@@ -116,7 +88,7 @@ spec:
                 toFieldPath: spec.forProvider.permission
               - type: FromCompositeFieldPath
                 fromFieldPath: spec.teamName
-                toFieldPath: spec.forProvider.teamId:w
+                toFieldPath: spec.forProvider.teamId
 
     - step: automatically-detect-ready-composed-resources
       functionRef:
