--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .setup-env
 
-.env.argocd
+.env.*
+.vscode
 
 # avoid commiting rendered manifests
 infra-setup/manifests/rendered/*
@@ -8,3 +9,4 @@ infra-setup/manifests/rendered/*
 crossplane-gke-sa-key.json
 
 claude_desktop_config.json
+claude_desktop_config_mcp.json
