--- a/ai/kgateway-mcp/httproute-xlistener.yaml
+++ b/ai/kgateway-mcp/httproute-xlistener.yaml
@@ -32,5 +32,12 @@ spec:
     sectionName: mcp
   rules:
   - backendRefs:
-    - name: mcp-everything-service
+    - group: ""
+      kind: Service
+      name: mcp-everything-service
       port: 3000
+      weight: 1
+    matches:
+    - path:
+        type: PathPrefix
+        value: "/"
