kgateway mcp: rename shared gateway

--- a/ai/kgateway-mcp/httproute-xlistener.yaml
+++ b/ai/kgateway-mcp/httproute-xlistener.yaml
@@ -8,7 +8,7 @@ spec:
   parentRef:
     kind: Gateway
     group: gateway.networking.k8s.io
-    name: agent-gateway
+    name: shared-mcp-kgateway
     namespace: mcp
   listeners:
   - name: mcp
