--- a/ai/kgateway-mcp/gateway.yaml
+++ b/ai/kgateway-mcp/gateway.yaml
@@ -1,7 +1,7 @@
 kind: Gateway
 apiVersion: gateway.networking.k8s.io/v1
 metadata:
-  name: shared-gateway
+  name: shared-mcp-kgateway
   namespace: kgateway-system
 spec:
   gatewayClassName:  agentgateway
