kagent: upgrade 0.3.15 remove rendered helm workaround

--- a/platform/argo-rejects/rendered-helm-workaround.yaml
+++ b/platform/argo-rejects/rendered-helm-workaround.yaml
@@ -1,4 +1,6 @@
 # Edited due to https://github.com/kagent-dev/kagent/issues/345
+# git mv ai/kagent/kagent-app/rendered-helm-workaround.yaml platform/argo-rejects
+# testing new helm release
 ---
 # Source: kagent/templates/serviceaccount.yaml
 apiVersion: v1
