--- a/platform/config/helm-applications/kagent.yaml
+++ b/platform/config/helm-applications/kagent.yaml
@@ -9,5 +9,10 @@ namespace: kagent-system
 helm:
   values:
     providers:
-      OpenAI:
+      default: openAI
+      openAI:
+        provider: OpenAI
+        model: "gpt-4.1-mini"
+        apiKeySecretRef: kagent-openai
+        apiKeySecretKey: OPENAI_API_KEY
         config: {}
