github: fix repo access resource name to be unique

--- a/platform/crossplane/compositions/github-team-config.yaml
+++ b/platform/crossplane/compositions/github-team-config.yaml
@@ -75,10 +75,9 @@ spec:
                 combine:
                   variables:
                     - fromFieldPath: spec.teamName
-                    - fromFieldPath: spec.repositoryAccess[0].repositoryName
                   strategy: string
                   string:
-                    fmt: "%s-%s"
+                    fmt: "%s-repoaccess" # Ensures a unique name like 'teamname-repoaccess'
                 toFieldPath: metadata.name
               - type: FromCompositeFieldPath
                 fromFieldPath: spec.repositoryAccess[0].repositoryName
