github: break composition again to avoid hammering the github while fixing the rest of it

--- a/platform/crossplane/compositions/github-repo-config.yaml
+++ b/platform/crossplane/compositions/github-repo-config.yaml
@@ -346,7 +346,7 @@ spec:
           transforms:
           - type: string
             string:
-              type: Format
+              #type: Format
               fmt: "%s-repository"
         - type: FromCompositeFieldPath
           fromFieldPath: spec.serviceName
