github: update all names with explicit names

--- a/platform/crossplane/compositions/github-repo-config.yaml
+++ b/platform/crossplane/compositions/github-repo-config.yaml
@@ -146,6 +146,7 @@ spec:
           apiVersion: repo.github.upbound.io/v1alpha1
           kind: RepositoryRuleset
           metadata:
+            name: "" # Will be patched with deterministic name
             annotations:
               crossplane.io/resource-policy: Orphan
           spec:
@@ -170,6 +171,23 @@ spec:
             providerConfigRef:
               name: github-provider-org
         patches:
+        - type: CombineFromComposite
+          combine:
+            variables:
+            - fromFieldPath: spec.teamName
+            - fromFieldPath: spec.serviceName
+            strategy: string
+            string:
+              fmt: "%s-%s-ruleset-main"
+          toFieldPath: metadata.name
+        - type: FromCompositeFieldPath
+          fromFieldPath: metadata.name
+          toFieldPath: spec.forProvider.repositoryRef.name
+          transforms:
+          - type: string
+            string:
+              type: Format
+              fmt: "%s-repository"
         - type: FromCompositeFieldPath
           fromFieldPath: spec.serviceName
           toFieldPath: spec.forProvider.repository
@@ -346,7 +364,7 @@ spec:
           transforms:
           - type: string
             string:
-              #type: Format
+              type: Format
               fmt: "%s-repository"
         - type: FromCompositeFieldPath
           fromFieldPath: spec.serviceName
@@ -446,14 +464,33 @@ spec:
           apiVersion: repo.github.upbound.io/v1alpha1
           kind: RepositoryCollaborator
           metadata:
+            name: "" # Will be patched with deterministic name
             annotations:
               crossplane.io/resource-policy: Orphan
           spec:
             forProvider:
-              permission: push
+              username: platform-bot
+              permission: push # One of 'pull', 'push', 'maintain', 'triage' or 'admin' or the name of an existing custom repository role
             providerConfigRef:
               name: github-provider-org
         patches:
+        - type: CombineFromComposite
+          combine:
+            variables:
+            - fromFieldPath: spec.teamName
+            - fromFieldPath: spec.serviceName
+            strategy: string
+            string:
+              fmt: "%s-%s-collab-platform-bot"
+          toFieldPath: metadata.name
+        - type: FromCompositeFieldPath
+          fromFieldPath: metadata.name
+          toFieldPath: spec.forProvider.repositoryRef.name
+          transforms:
+          - type: string
+            string:
+              type: Format
+              fmt: "%s-repository"
         - type: FromCompositeFieldPath
           fromFieldPath: spec.serviceName
           toFieldPath: spec.forProvider.repository
@@ -513,7 +550,7 @@ spec:
               crossplane.io/resource-policy: Orphan
           spec:
             forProvider:
-              file: .github/CODEOWNERS
+              file: CODEOWNERS.md
               commitMessage: "Add CODEOWNERS file via Crossplane"
               commitAuthor: "Platform Engineering"
               commitEmail: "platform@company.com"
@@ -537,7 +574,7 @@ spec:
               - fromFieldPath: spec.settings.defaultBranch # Fallback to 'main' if not set
             strategy: string
             string:
-              fmt: "%s:.github/CODEOWNERS:%s" # Uses spec.settings.defaultBranch or you can hardcode 'main'
+              fmt: "%s:CODEOWNERS.md:%s" # Uses spec.settings.defaultBranch or you can hardcode 'main'
           toFieldPath: metadata.annotations["crossplane.io/external-name"]
           policy:
             fromFieldPath: Optional
@@ -551,9 +588,10 @@ spec:
           combine:
             variables:
             - fromFieldPath: spec.teamName
+            - fromFieldPath: spec.teamName
             strategy: string
             string:
-              fmt: "# Repository owned by %s team\n* @myorg/%s\n"
+              fmt: "# Repository owned by %s team\n* @tornado-demo/%s\n"
           toFieldPath: spec.forProvider.content
           policy:
             fromFieldPath: Optional
