--- a/ai/kgateway-mcp/httproute-xlistener.yaml
+++ b/ai/kgateway-mcp/httproute-xlistener.yaml
@@ -35,6 +35,7 @@ spec:
     - group: ""
       kind: Service
       name: mcp-website-fetcher
+      namespace: kagent
       port: 80
       weight: 1
     matches:
