--- a/ai/kagent/config/crossplane-monitor.yaml
+++ b/ai/kagent/config/crossplane-monitor.yaml
@@ -72,7 +72,7 @@ spec:
 ---
 # GitHub Integration Tool for autonomous PRs
 apiVersion: kagent.ai/v1alpha1
-kind: Tool
+kind: ToolsServer
 metadata:
   name: github-auto-pr
   namespace: kagent
