--- a/ai/kagent/config/crossplane-research.yaml
+++ b/ai/kagent/config/crossplane-research.yaml
@@ -38,7 +38,7 @@ spec:
 ---
 # Integration with Claude's Advanced Research
 apiVersion: kagent.ai/v1alpha1
-kind: Tool
+kind: ToolsServer
 metadata:
   name: advanced-research
   namespace: kagent
